--- a/apps/films/templates/films/home_guest.html
+++ b/apps/films/templates/films/home_guest.html
@@ -23,7 +23,7 @@
     <nav>
         <div class="nav-left" style="color: #fc5b9b">Letterboxd</div>
         <div class="nav-right">
-            <a href="#" style="color: #fc5b9b">Sign in</a>
+            <a href="{% url 'sign_in' %}" style="color: #fc5b9b">Sign in</a>
             <a href="{% url 'create_profile' %}" style="color: #fc5b9b">Create account</a>
             <a href="{% url 'films' %}" style="color: #fc5b9b">Films</a>
             <div class="search-bar">
